# mlir-aie

include/aie/Targets/: AIETargets.h
lib/Targets/: AIETargets.cpp
tools/: CMakeLists.txt
tools/aiecc/: CMakeLists.txt  aiecc.cpp
